supervisor-macros/tests/ui/compile_fail/shared_redeclared_mismatch.stderr
error: shared resource `H` re-declared with a different shape: `shared OtherHandle` here vs `shared Handle` on `A` — every declaration of a shared slot must repeat the same kind markers and type
  --> tests/ui/compile_fail/shared_redeclared_mismatch.rs:18:21
   |
18 |         resources: [H: shared OtherHandle]; // type differs from A's declaration
   |                     ^
